# sumgraph

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  create_graph_from_data.py  environment.yml  long.prof  mypy.ini  profile.out  pyproject.toml
.github/workflows/: ci.yml
data/: Connections_for_7_31_21.csv  sample_soap_pared_down.csv
sumgraph/: __main__.py  cli.py
sumgraph/data_handler/data_accessor/: accessor.py  connections_soap_accessor.py  data_type.py  distances_soap_accessor.py  file_based_accessor.py  pared_down_soap_accessor.py
sumgraph/data_handler/data_adapter/: connections_soap_to_zigzag_adapter.py  distances_soap_to_dynamic_weighted_graph_adapter.py
sumgraph/helper/: closest_sorted_array_search.py  find_integral_bound.py  source_shortest_paths_dynamic_graph.py
sumgraph/logger/: logger.py
sumgraph/model/: dynamic_weighted_graph.py
sumgraph/model/centrality_map/: centrality_map.py
sumgraph/model/dynamic_weighted_graph/: convention_enum.py  dynamic_weighted_graph.py  edge_weight_fn.py
sumgraph/model/summary_function/: journey_traversal_summarizer.py
sumgraph/model/summary_graph/: summary_graph.py
tests/data_handler/data_accessor/: test_pared_down_soap_accessor.py
tests/helper/: test_closest_sorted_array_search.py  test_find_integral_bound.py
tests/model/: test_dynamic_weighted_graph.py
tests/model/dynamic_weighted_graph/: test_dynamic_weighted_graph.py
