[tool.poetry]
name = "nasa-average-graphs"
version = "0.1.0"
description = "Summary graphs for NASA"
authors = ["Dev Dabke <dev@dabke.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.7b0"
pandas = "^1.3.1"
networkx = "^2.6.2"
matplotlib = "^3.4.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pylint = "^2.9.6"
mypy = "^0.910"
codecov = "^2.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
